--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
     "connected-react-router": "6.8.0",
+    "form-data": "^4.0.0",
     "history": "4.10.1",
     "immer": "^9.0.5",
     "react": "^17.0.2",
