--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connected-react-router": "6.8.0",
     "history": "4.10.1",
     "immer": "^9.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
