--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "form-data": "^4.0.0",
     "history": "4.10.1",
     "immer": "^9.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-kakao-login": "^2.1.0",
