--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-thunk": "^2.3.0",
     "style-components": "^0.1.0",
     "styled-components": "^5.3.0",
+    "swiper": "^6.8.1",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
