--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "browser-image-compression": "^1.0.14",
     "connected-react-router": "6.8.0",
+    "global": "^4.4.0",
     "history": "4.10.1",
     "immer": "^9.0.5",
     "jwt-decode": "^3.1.2",
@@ -20,7 +21,7 @@
     "react-kakao-login": "^2.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.0",
     "redux-actions": "^2.6.5",
