--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.32.0",
     "react-kakao-login": "^2.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
