--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "immer": "^9.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.0",
     "react-kakao-login": "^2.1.0",
