--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.0",
     "react-intersection-observer": "^8.32.0",
     "react-kakao-login": "^2.1.0",
     "react-redux": "^7.2.4",
