--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "history": "4.10.1",
     "immer": "^9.0.5",
     "jwt-decode": "^3.1.2",
+    "lottie-web": "^5.7.13",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
