--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "history": "4.10.1",
     "immer": "^9.0.5",
     "jwt-decode": "^3.1.2",
-    "lottie-web": "^5.7.13",
+    "lottie-web-light": "^1.1.0",
     "react": "^17.0.2",
     "react-autocomplete-hint": "^1.3.0",
     "react-dom": "^17.0.2",
@@ -36,7 +36,6 @@
     "style-components": "^0.1.0",
     "styled-components": "^5.3.0",
     "swiper": "^6.8.1",
-    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -62,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cra-bundle-analyzer": "^0.1.0"
   }
 }
